<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Curso Online</string>
    <string name="manage_courses">Gerenciar Cursos</string>
    <string name="course_name_hint">Nome do curso</string>
    <string name="hours_hint">Horas do curso</string>
    <string name="save_course">Salvar curso</string>
    <string name="add_course">Add curso</string>
    <string name="course_saved">Curso salvo</string>
    <string name="edit_course">Editar curso</string>
    <string name="course_updated">Curso atualizado</string>
    <string name="course_deleted">Curso excluído</string>
    <string name="all_courses_deleted">Todos os cursos excluídos</string>
    <string name="delete_all_courses">Excluir todos os cursos</string>
    <string name="delete_course">Excluir curso</string>
    <string name="course_not_found">Curso não encontrado</string>
    <string name="delete_course_message">Tem certeza que deseja deletar este curso?</string>
    <string name="delete_all_courses_message">Deletar todos os cursos?</string>

    <string name="manage_students">Gerenciar Alunos</string>
    <string name="delete_all_students">Excluir todos os alunos</string>
    <string name="edit_student">Editar Estudante</string>
    <string name="add_student">Add Estudante</string>
    <string name="student_updated">Estudante Atulizado</string>
    <string name="student_saved">Estudante Salvo</string>
    <string name="delete_student">Deletar estudante?</string>
    <string name="student_deleted">Estudante deletado</string>
    <string name="delete_all_students_message">Deseja deletar todos os estudantes?</string>
    <string name="all_students_deleted">Todos os estudantes deletados.</string>
    <string name="student_name_hint">Nome</string>
    <string name="save_student">Salvar Estudante</string>
    <string name="student_email_hint">Email</string>
    <string name="student_phone_hint">Telefone</string>
    <string name="student_course_hint">Curso</string>
    <string name="delete_student_message">Deseja deletar o estudante?</string>

    <string name="please_insert">Por favor, insira todos os dados</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="course_hours_list_label">"Horas: "</string>
    <string name="course_name_list_label">"Curso: "</string>
    <string name="student_name_list_label">"Nome: "</string>
</resources>
